// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-drawer should render with _label="Label" _open=false 1`] = `
<kol-drawer class="drawer kol-drawer">
  <template shadowrootmode="open">
    <dialog class="drawer__dialog">
      <div aria-label="Label" class="drawer__wrapper drawer__wrapper--top is-closing">
        <div class="drawer__content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </template>
</kol-drawer>
`;

exports[`kol-drawer should render with _label="Label" _open=true 1`] = `
<kol-drawer class="drawer kol-drawer">
  <template shadowrootmode="open">
    <dialog class="drawer__dialog">
      <div aria-label="Label" class="drawer__wrapper drawer__wrapper--open drawer__wrapper--top">
        <div class="drawer__content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </template>
</kol-drawer>
`;

exports[`kol-drawer should render with _label="Label" 1`] = `
<kol-drawer class="drawer kol-drawer">
  <template shadowrootmode="open">
    <dialog class="drawer__dialog">
      <div aria-label="Label" class="drawer__wrapper drawer__wrapper--top is-closing">
        <div class="drawer__content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </template>
</kol-drawer>
`;

exports[`kol-drawer should render with _label="Label" 2`] = `
<kol-drawer class="drawer kol-drawer">
  <template shadowrootmode="open">
    <dialog class="drawer__dialog">
      <div aria-label="Label" class="drawer__wrapper drawer__wrapper--top is-closing">
        <div class="drawer__content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </template>
</kol-drawer>
`;
